objects/advpm__Advologix_Timeline_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Disable_ASBillings_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable ASBillings on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Calls_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Calls on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Chatter_Feed_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Chatter Feed on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Content_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Content on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Emails_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Emails on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Events_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Events on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Expenses_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Expenses on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Notes_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Notes on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Offers_and_Demands_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Offers and Demands on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Tasks_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Tasks on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Time_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Time on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__ListView_State_Settings__c</fullName>
        <label>ListView State Settings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advologix Timeline Settings</label>
</CustomObject>